Closed Bug 1619458 Opened 4 years ago Closed 4 years ago

Don't expose browser tooltips to VoiceOver

Categories

(Core :: Disability Access APIs, defect, P2)

All
macOS
defect

Tracking

()

VERIFIED FIXED
mozilla75
Tracking Status
firefox75 --- verified

People

(Reporter: eeejay, Assigned: eeejay)

Details

(Whiteboard: [mac2020_1])

Attachments

(2 files)

Tooltips are not expected to be accessible via VoiceOver. The supplemental information should be available via descriptions and labels.

Assignee: nobody → eitan
Status: NEW → ASSIGNED

(In reply to Eitan Isaacson [:eeejay] from comment #0)

Tooltips are not expected to be accessible via VoiceOver. The supplemental information should be available via descriptions and labels.

Just for the record, tooltips that are associated using the XUL tooltip attribute can't expose a11y info (e.g. description) on the element with which they're associated. This is an inherent problem with XUL tooltips. This is a problem even when the tooltips are exposed, so this isn't specific to Mac, but removing them from the tree completely potentially makes this more pressing. In terms of Firefox front-end, this has (does?) hurt us in a few places; see bug 1576067.

Pushed by eisaacson@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/0a1fd8684242
Add Accessible::IsXULTooltip. r=Jamie
https://hg.mozilla.org/integration/autoland/rev/5fb03fa3a13a
Don't create OSX accessibles for XUL tooltips. r=morgan
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla75

Hi Eitan, is there something that QA can help with? And if so, could you please provide some STR? Thanks!

Flags: needinfo?(eitan)

Thanks Catalin!

STR:

  1. Hover with a mouse over a tab until you see a tooltip, then move mouse away.
  2. Turn on VoiceOver
  3. Press shift+control+option up a couple of times until VO cursor rectangle is on entire window
  4. Press shift+control+option down once.
  5. Press control+option+left 3 times

Expected:
There should be three areas VoiceOver focuses, browser tabs, navigation, and web content.
Pressing control+option+left after web content should do nothing.

Flags: needinfo?(eitan)

Thanks for the info Eitan!

Flags: qe-verify+

I'm not able to reproduce the issue on macOS 10.15 using Firefox Nightly 75.0a1 (2020-03-02), followed the steps from STR. I heard the same things on Firefox nightly where I tried to reproduced and on Firefox 75.0b9 where I have to verify.

Can you please verify that the issue is fixed in the latest Beta build? You can download the Beta build from the following link: https://archive.mozilla.org/pub/firefox/candidates/75.0b9-candidates/build1/mac/

Thanks!

Flags: qe-verify+ → needinfo?(eitan)

It works as expected. Thanks!

Flags: needinfo?(eitan)

Thanks Eitan! I will mark this issue verified on Fx 75.

Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: