Bug 1619458 - Add Accessible::IsXULTooltip. r=Jamie

Differential Revision: https://phabricator.services.mozilla.com/D65038